Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc24_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc24_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc24_translation-en-brahmali.json
@@ -27,7 +27,7 @@
   "pli-tv-bu-vb-pc24:2.1.3": "Monk: ",
   "pli-tv-bu-vb-pc24:2.1.4": "… The monk who has been given the full ordination by a unanimous Sangha through a legal procedure consisting of one motion and three announcements that is irreversible and fit to stand—this sort of monk is meant in this case. ",
   "pli-tv-bu-vb-pc24:2.1.5": "For the sake of worldly gain: ",
-  "pli-tv-bu-vb-pc24:2.1.6": "for the sake of robe-cloth, for the sake of almsfood, for the sake of a dwelling, for the sake of medicines, for the sake of honor, for the sake of respect, for the sake of deference, for the sake of veneration, for the sake of worship. ",
+  "pli-tv-bu-vb-pc24:2.1.6": "for the sake of robe-cloth, for the sake of almsfood, for the sake of a dwelling, for the sake of medicinal supplies, for the sake of honor, for the sake of respect, for the sake of deference, for the sake of veneration, for the sake of worship. ",
   "pli-tv-bu-vb-pc24:2.1.7": "Says: ",
   "pli-tv-bu-vb-pc24:2.1.8": "if, concerning one who is fully ordained and who has been appointed by the Sangha as an instructor of nuns—desiring to disparage him, desiring to give him a bad reputation, desiring to humiliate him—he says, “He instructs for the sake of robe-cloth,” “… for the sake of almsfood,” “… for the sake of a dwelling,” “… for the sake of medicinal supplies,” “… for the sake of honor,” “… for the sake of respect,” “… for the sake of deference,” “… for the sake of veneration,” “… for the sake of worship,” he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc24:2.2.0": "Permutations ",
