--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc24_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc24_translation-en-brahmali.json
@@ -6,7 +6,7 @@
   "pli-tv-bu-vb-pc24:0.5": "24. The training rule on worldly gain ",
   "pli-tv-bu-vb-pc24:1.0": "Origin story ",
   "pli-tv-bu-vb-pc24:1.1": "At one time the Buddha was staying at Sāvatthī in the Jeta Grove, Anāthapiṇḍika’s Monastery. ",
-  "pli-tv-bu-vb-pc24:1.2": "At that time the senior monks who were instructing the nuns received robe-cloth, almsfood, dwellings, and medicines. ",
+  "pli-tv-bu-vb-pc24:1.2": "At that time the senior monks who were instructing the nuns received robe-cloth, almsfood, dwellings, and medicinal supplies. ",
   "pli-tv-bu-vb-pc24:1.3": "And the monks from the group of six said this about them, ",
   "pli-tv-bu-vb-pc24:1.4": "“The senior monks aren’t instructing the nuns as a service, but for the sake of worldly gain.” ",
   "pli-tv-bu-vb-pc24:1.5": "The monks of few desires complained and criticized them, ",
