Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np6_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np6_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np6_translation-en-brahmali.json
@@ -12,7 +12,7 @@
   "pli-tv-bu-vb-np6:1.1.4": "And Upananda instructed, inspired, and gladdened him with a teaching. ",
   "pli-tv-bu-vb-np6:1.1.5": "Afterwards that merchant’s son said to Upananda: ",
   "pli-tv-bu-vb-np6:1.1.6": "“Venerable, please tell me what you need. ",
-  "pli-tv-bu-vb-np6:1.1.7": "I can give you robe-cloth, almsfood, a dwelling, and medicines.” ",
+  "pli-tv-bu-vb-np6:1.1.7": "I can give you robe-cloth, almsfood, a dwelling, and medicinal supplies.” ",
   "pli-tv-bu-vb-np6:1.1.8": "“If you wish to give me something, give me one of your wrap garments.” ",
   "pli-tv-bu-vb-np6:1.1.9": "“It’s shameful, Venerable, for a gentleman to walk around in only one wrap. ",
   "pli-tv-bu-vb-np6:1.1.10": "Please wait until I get back home. ",
