Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd22_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd22_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd22_translation-en-brahmali.json
@@ -102,7 +102,7 @@
   "pli-tv-kd22:1.6.2": "“Venerable, you’re the only Sakyan monastic; ",
   "pli-tv-kd22:1.6.3": "none of these others is. ",
   "pli-tv-kd22:1.6.4": "Please stay at Vesālī. ",
-  "pli-tv-kd22:1.6.5": "We’ll do our best to supply you with robe-cloth, almsfood, a dwelling, and medicines.” ",
+  "pli-tv-kd22:1.6.5": "We’ll do our best to supply you with robe-cloth, almsfood, a dwelling, and medicinal supplies.” ",
   "pli-tv-kd22:1.6.6": "Having persuaded the lay followers of Vesālī, Yasa returned to the monastery together with his companion messenger. ",
   "pli-tv-kd22:1.7.1": "Soon afterwards the Vajjian monks asked the monk who had been the companion messenger, ",
   "pli-tv-kd22:1.7.2": "“Did Yasa ask the lay followers for forgiveness?” ",
