--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -71,5 +71,6 @@
   "mn3:6.7": "આ પહેલી રીતે વરિષ્ઠ ભિક્ષુ નિંદાપાત્ર છે.",
   "mn3:6.8": "‘જે વસ્તુઓનો ગુરૂએ ત્ચાગ કરવાનો કહ્યો હોય એનો ત્યાગ નથી કરતા’—",
   "mn3:6.9": "આ બીજી રીતે વરિષ્ઠ ભિક્ષુ નિંદાપાત્ર છે.",
-  "mn3:6.10": "‘તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા હોય છે’—"
+  "mn3:6.10": "‘તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા હોય છે’—",
+  "mn3:6.11": "આ ત્રીજી રીતે વરિષ્ઠ ભિક્ષુ નિંદાપાત્ર છે."
 }
