--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -74,5 +74,6 @@
   "mn3:6.10": "‘તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા હોય છે’—",
   "mn3:6.11": "આ ત્રીજી રીતે વરિષ્ઠ ભિક્ષુ નિંદાપાત્ર છે.",
   "mn3:6.12": "આદરણીયો, વરિષ્ઠ ભિક્ષુ આમ ત્રણ રીતે નિંદાપાત્ર હોય છે.",
-  "mn3:6.13": "આ બાબતમાં મધ્યમ ભિક્ષુ …"
+  "mn3:6.13": "આ બાબતમાં મધ્યમ ભિક્ષુ …",
+  "mn3:6.14": "અને એ જ પ્રમાણે નવા ભિક્ષુ ત્રણ કારણોના આધારે નિંદાપાત્ર હોય છે."
 }
