--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -76,5 +76,6 @@
   "mn3:6.12": "આદરણીયો, વરિષ્ઠ ભિક્ષુ આમ ત્રણ રીતે નિંદાપાત્ર હોય છે.",
   "mn3:6.13": "આ બાબતમાં મધ્યમ ભિક્ષુ …",
   "mn3:6.14": "અને એ જ પ્રમાણે નવા ભિક્ષુ ત્રણ કારણોના આધારે નિંદાપાત્ર હોય છે.",
-  "mn3:6.15": "‘એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા’—"
+  "mn3:6.15": "‘એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા’—",
+  "mn3:6.16": "આ પહેલી રીતે નવા ભિક્ષુ નિંદાપાત્ર છે."
 }
