--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -79,5 +79,6 @@
   "mn3:6.15": "‘એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા’—",
   "mn3:6.16": "આ પહેલી રીતે નવા ભિક્ષુ નિંદાપાત્ર છે.",
   "mn3:6.17": "‘જે વસ્તુઓનો ગુરૂએ ત્ચાગ કરવાનો કહ્યો હોય એનો ત્યાગ નથી કરતા’—",
-  "mn3:6.18": "આ બીજી રીતે નવા ભિક્ષુ નિંદાપાત્ર છે."
+  "mn3:6.18": "આ બીજી રીતે નવા ભિક્ષુ નિંદાપાત્ર છે.",
+  "mn3:6.19": "‘તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા હોય છે’—"
 }
