Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -81,5 +81,6 @@
   "mn3:6.17": "‘જે વસ્તુઓનો ગુરૂએ ત્ચાગ કરવાનો કહ્યો હોય એનો ત્યાગ નથી કરતા’—",
   "mn3:6.18": "આ બીજી રીતે નવા ભિક્ષુ નિંદાપાત્ર છે.",
   "mn3:6.19": "‘તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા હોય છે’—",
-  "mn3:6.20": "આ ત્રીજી રીતે નવા ભિક્ષુ નિંદાપાત્ર છે."
+  "mn3:6.20": "આ ત્રીજી રીતે નવા ભિક્ષુ નિંદાપાત્ર છે.",
+  "mn3:6.21": "આદરણીયો, નવા ભિક્ષુ આમ ત્રણ રીતે નિંદાપાત્ર હોય છે."
 }
