--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -83,5 +83,6 @@
   "mn3:6.19": "‘તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા હોય છે’—",
   "mn3:6.20": "આ ત્રીજી રીતે નવા ભિક્ષુ નિંદાપાત્ર છે.",
   "mn3:6.21": "આદરણીયો, નવા ભિક્ષુ આમ ત્રણ રીતે નિંદાપાત્ર હોય છે.",
-  "mn3:6.22": "આમ આદરણીયો, એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા એવું કહેવાય."
+  "mn3:6.22": "આમ આદરણીયો, એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા એવું કહેવાય.",
+  "mn3:7.1": "કઇ રીતે એકાંતમાં રહેતા ગુરૂના શિષ્ચો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે?"
 }
