--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -90,5 +90,6 @@
   "mn3:7.4": "તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા નથી હોતા.",
   "mn3:7.5": "આ બાબતમાં ત્રણ કારણોના આધારે વરિષ્ઠ ભિક્ષુ વખાણ કરવા લાયક છે.",
   "mn3:7.6": "‘એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે’—",
-  "mn3:7.7": "આ પહેલી રીતે વરિષ્ઠ ભિક્ષુ વખાણ કરવા લાયક છે."
+  "mn3:7.7": "આ પહેલી રીતે વરિષ્ઠ ભિક્ષુ વખાણ કરવા લાયક છે.",
+  "mn3:7.8": "‘જે વસ્તુઓનો ગુરૂએ ત્ચાગ કરવાનો કહ્યો હોય એનો ત્યાગ કરે છે’—"
 }
