Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -93,5 +93,6 @@
   "mn3:7.7": "આ પહેલી રીતે વરિષ્ઠ ભિક્ષુ વખાણ કરવા લાયક છે.",
   "mn3:7.8": "‘જે વસ્તુઓનો ગુરૂએ ત્ચાગ કરવાનો કહ્યો હોય એનો ત્યાગ કરે છે’—",
   "mn3:7.9": "આ બીજી રીતે વરિષ્ઠ ભિક્ષુ વખાણ કરવા લાયક છે.",
-  "mn3:7.10": "તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા નથી’—"
+  "mn3:7.10": "તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા નથી’—",
+  "mn3:7.11": "આ ત્રીજી રીતે વરિષ્ઠ ભિક્ષુ વખાણ કરવા લાયક છે."
 }
