--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -96,5 +96,6 @@
   "mn3:7.10": "તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા નથી’—",
   "mn3:7.11": "આ ત્રીજી રીતે વરિષ્ઠ ભિક્ષુ વખાણ કરવા લાયક છે.",
   "mn3:7.12": "આદરણીયો, વરિષ્ઠ ભિક્ષુ આમ ત્રણ રીતે વખાણ કરવા લાયક છે.",
-  "mn3:7.13": "આ બાબતમાં મધ્યમ ભિક્ષુ …"
+  "mn3:7.13": "આ બાબતમાં મધ્યમ ભિક્ષુ …",
+  "mn3:7.14": "નવા ભિક્ષુ ત્રણ કારણોના આધારે વખાણ કરવા લાયક છે."
 }
