--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -98,5 +98,6 @@
   "mn3:7.12": "આદરણીયો, વરિષ્ઠ ભિક્ષુ આમ ત્રણ રીતે વખાણ કરવા લાયક છે.",
   "mn3:7.13": "આ બાબતમાં મધ્યમ ભિક્ષુ …",
   "mn3:7.14": "નવા ભિક્ષુ ત્રણ કારણોના આધારે વખાણ કરવા લાયક છે.",
-  "mn3:7.15": "‘એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે’—"
+  "mn3:7.15": "‘એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે’—",
+  "mn3:7.16": "આ પહેલી રીતે નવા ભિક્ષુ વખાણ કરવા લાયક છે."
 }
