--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.73_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.73_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.73:0.2": "8. Das Kapitel über Jucken ",
   "sn22.73:0.3": "Vorteilhafte Folgen ",
   "sn22.73:1.1": "In Sāvatthī. ",
-  "sn22.73:1.2": "„Mönche und Nonnen, ein ungebildeter gewöhnlicher Mensch versteht nicht wahrhaftig die vorteilhaften und nachteiligen Folgen und das Entrinnen, wenn es um Form geht,  "
+  "sn22.73:1.2": "„Mönche und Nonnen, ein ungebildeter gewöhnlicher Mensch versteht nicht wahrhaftig die vorteilhaften und nachteiligen Folgen und das Entrinnen, wenn es um Form geht,  ",
+  "sn22.73:1.3": "wenn es um Gefühl geht, "
 }
