--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.73_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.73_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn22.73:1.1": "In Sāvatthī. ",
   "sn22.73:1.2": "„Mönche und Nonnen, ein ungebildeter gewöhnlicher Mensch versteht nicht wahrhaftig die vorteilhaften und nachteiligen Folgen und das Entrinnen, wenn es um Form geht,  ",
   "sn22.73:1.3": "wenn es um Gefühl geht, ",
-  "sn22.73:1.4": "wenn es um Wahrnehmung geht, "
+  "sn22.73:1.4": "wenn es um Wahrnehmung geht, ",
+  "sn22.73:1.5": "wenn es um Entscheidungen geht, "
 }
