--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.73_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.73_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.73:1.4": "wenn es um Wahrnehmung geht, ",
   "sn22.73:1.5": "wenn es um Entscheidungen geht ",
   "sn22.73:1.6": "und wenn es um Bewusstsein geht. ",
-  "sn22.73:1.7": "Ein gebildeter edler Schüler versteht wahrhaftig die vorteilhaften und nachteiligen Folgen und das Entrinnen, wenn es um Form geht,  "
+  "sn22.73:1.7": "Ein gebildeter edler Schüler versteht wahrhaftig die vorteilhaften und nachteiligen Folgen und das Entrinnen, wenn es um Form geht,  ",
+  "sn22.73:1.8": "wenn es um Gefühl geht, "
 }
