--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.74_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.74_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn22.74:0.1": "Verbundene Lehrreden 22.74 "
+  "sn22.74:0.1": "Verbundene Lehrreden 22.74 ",
+  "sn22.74:0.2": "8. Das Kapitel über Jucken "
 }
