--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.74_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.74_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.74:0.1": "Verbundene Lehrreden 22.74 ",
   "sn22.74:0.2": "8. Das Kapitel über Jucken ",
   "sn22.74:0.3": "Ursprung ",
-  "sn22.74:1.1": "In Sāvatthī. "
+  "sn22.74:1.1": "In Sāvatthī. ",
+  "sn22.74:1.2": "„Mönche und Nonnen, ein ungebildeter gewöhnlicher Mensch versteht nicht wahrhaftig den Ursprung, das Enden, die vorteilhaften und nachteiligen Folgen und das Entrinnen, wenn es um Form geht, "
 }
