Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.74_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.74_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.74_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.74:0.3": "Ursprung ",
   "sn22.74:1.1": "In Sāvatthī. ",
   "sn22.74:1.2": "„Mönche und Nonnen, ein ungebildeter gewöhnlicher Mensch versteht nicht wahrhaftig den Ursprung, das Enden, die vorteilhaften und nachteiligen Folgen und das Entrinnen, wenn es um Form geht, ",
-  "sn22.74:1.3": "wenn es um Gefühl geht, "
+  "sn22.74:1.3": "wenn es um Gefühl geht, ",
+  "sn22.74:1.4": "wenn es um Wahrnehmung geht, "
 }
