--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.74_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.74_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn22.74:1.6": "und wenn es um Bewusstsein geht. ",
   "sn22.74:1.7": "Ein gebildeter edler Schüler versteht wahrhaftig den Ursprung, das Enden, die vorteilhaften und nachteiligen Folgen und das Entrinnen, wenn es um Form geht, ",
   "sn22.74:1.8": "wenn es um Gefühl geht, ",
-  "sn22.74:1.9": "wenn es um Wahrnehmung geht, "
+  "sn22.74:1.9": "wenn es um Wahrnehmung geht, ",
+  "sn22.74:1.10": "wenn es um Entscheidungen geht "
 }
