--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -684,6 +684,7 @@
   "sn-name:683.sn22-khajjaniyavagga": "Das Kapitel über Jucken ",
   "sn-name:684.sn22.73": "Vorteilhafte Folgen ",
   "sn-name:685.sn22.74": "Ursprung ",
+  "sn-name:686.sn22.75": "Ursprung (2) ",
   "sn-name:694.sn22-theravagga": "Das Kapitel mit Ordensältesten ",
   "sn-name:702.sn22.90": "Mit Channa ",
   "sn-name:705.sn22-pupphavagga": "Das Kapitel über Blumen ",
