--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.75_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.75_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.75:0.2": "8. Das Kapitel über Jucken ",
   "sn22.75:0.3": "Ursprung (2) ",
   "sn22.75:1.1": "In Sāvatthī. ",
-  "sn22.75:1.2": "„Mönche und Nonnen, ein gebildeter edler Schüler versteht wahrhaftig den Ursprung, das Enden, die vorteilhaften und nachteiligen Folgen und das Entrinnen, wenn es um Form geht, "
+  "sn22.75:1.2": "„Mönche und Nonnen, ein gebildeter edler Schüler versteht wahrhaftig den Ursprung, das Enden, die vorteilhaften und nachteiligen Folgen und das Entrinnen, wenn es um Form geht, ",
+  "sn22.75:1.3": "wenn es um Gefühl geht, "
 }
