Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -685,6 +685,7 @@
   "sn-name:684.sn22.73": "Vorteilhafte Folgen ",
   "sn-name:685.sn22.74": "Ursprung ",
   "sn-name:686.sn22.75": "Ursprung (2) ",
+  "sn-name:687.sn22.76": "Die Vollendeten ",
   "sn-name:694.sn22-theravagga": "Das Kapitel mit Ordensältesten ",
   "sn-name:702.sn22.90": "Mit Channa ",
   "sn-name:705.sn22-pupphavagga": "Das Kapitel über Blumen ",
