Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -594,7 +594,7 @@
   "sn-blurbs:sn22.73": "Nur ein edler Schüler kann die vorteilhaften und nachteiligen Folgen der Aggregate und das Entrinnen von ihnen wirklich verstehen. ",
   "sn-blurbs:sn22.74": "Nur ein edler Schüler kann den Ursprung, das Enden, die vorteilhaften und nachteiligen Folgen der Aggregate und das Entrinnen von ihnen wirklich verstehen. ",
   "sn-blurbs:sn22.75": "Nur ein edler Schüler kann den Ursprung, das Enden, die vorteilhaften und nachteiligen Folgen der Aggregate und das Entrinnen von ihnen wirklich verstehen. ",
-  "sn-blurbs:sn22.76": "Wer befreit ist, nachdem er die Aggregate wirklich verstanden hat, ist ein Vollendeter. Sie sind die besten der Wesen, bis hinauf zum Gipfel der Existenz. Eine Reihe von Strophen rühmt die Vollendeten. ",
+  "sn-blurbs:sn22.76": "Wer befreit ist, nachdem er die Aggregate wirklich verstanden hat, ist ein Vollendeter. Diese sind die besten der Wesen, bis hinauf zum Gipfel der Existenz. Eine Reihe von Strophen rühmt die Vollendeten. ",
   "sn-blurbs:sn22.77": "Wer befreit ist, nachdem er die Aggregate wirklich verstanden hat, ist ein Vollendeter. Sie sind die besten der Wesen, bis hinauf zum Gipfel der Existenz. ",
   "sn-blurbs:sn22.90": "Nachdem der Buddha auf seinem Sterbebett für ihn eine besondere Strafe angeordnet hat, sucht der Ehrwürdige Channa bei den Mönchen und Nonnen um Unterweisung nach. Als er nicht befriedigt ist, sucht er Ānanda auf, der ihn das an Kaccāyana gerichtete Sutta (SN 12.15) lehrt. ",
   "sn-blurbs:sn23": "Die „Verbundenen Lehrreden mit Rādha“ enthalten 46 Lehrreden mit einem Mönch namens Rādha über das Thema der fünf Aggregate und kann als ein Anhang zum vorigen _Saṁyutta_ betrachtet werden. ",
