--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.76:0.2": "8. Das Kapitel über Jucken ",
   "sn22.76:0.3": "Die Vollendeten ",
   "sn22.76:1.1": "In Sāvatthī. ",
-  "sn22.76:1.2": "„Mönche und Nonnen, Form ist unbeständig. "
+  "sn22.76:1.2": "„Mönche und Nonnen, Form ist unbeständig. ",
+  "sn22.76:1.3": "Was unbeständig ist, ist Leiden. "
 }
