--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.76:1.7": "Wahrnehmung ist unbeständig … ",
   "sn22.76:1.8": "Entscheidungen sind unbeständig … ",
   "sn22.76:1.9": "Bewusstsein ist unbeständig. ",
-  "sn22.76:1.10": "Was unbeständig ist, ist Leiden. "
+  "sn22.76:1.10": "Was unbeständig ist, ist Leiden. ",
+  "sn22.76:1.11": "Was Leiden ist, ist nicht-selbst. "
 }
