--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.76:1.9": "Bewusstsein ist unbeständig. ",
   "sn22.76:1.10": "Was unbeständig ist, ist Leiden. ",
   "sn22.76:1.11": "Was Leiden ist, ist nicht-selbst. ",
-  "sn22.76:1.12": "Und was nicht-selbst ist, sollte man wahrhaftig mit rechter Weisheit so sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ "
+  "sn22.76:1.12": "Und was nicht-selbst ist, sollte man wahrhaftig mit rechter Weisheit so sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
+  "sn22.76:2.1": "Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert von Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein. "
 }
