--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.76:2.3": "Er versteht: ‚Wiedergeburt ist beendet; die spirituelle Reise ist abgeschlossen; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
   "sn22.76:2.4": "Soweit es Wohnplätze der Lebewesen gibt, selbst bis hinauf zum Gipfel des Daseins, sind die Vollendeten die Vordersten und die Besten.“ ",
   "sn22.76:3.1": "Das sagte der Buddha. ",
-  "sn22.76:3.2": "Und der Heilige, der Lehrer, fuhr fort: "
+  "sn22.76:3.2": "Und der Heilige, der Lehrer, fuhr fort: ",
+  "sn22.76:4.1": "„Ach, wie glücklich sind die Vollendeten! "
 }
