--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.76:2.4": "Soweit es Wohnplätze der Lebewesen gibt, selbst bis hinauf zum Gipfel des Daseins, sind die Vollendeten die Vordersten und die Besten.“ ",
   "sn22.76:3.1": "Das sagte der Buddha. ",
   "sn22.76:3.2": "Und der Heilige, der Lehrer, fuhr fort: ",
-  "sn22.76:4.1": "„Ach, wie glücklich sind die Vollendeten! "
+  "sn22.76:4.1": "„Ach, wie glücklich sind die Vollendeten! ",
+  "sn22.76:4.2": "Verlangen findet man in ihnen nicht, "
 }
