Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn22.76:4.1": "„Ach, wie glücklich sind die Vollendeten! ",
   "sn22.76:4.2": "Verlangen findet man in ihnen nicht, ",
   "sn22.76:4.3": "Die Einbildung ‚ich bin‘ ist abgeschnitten, ",
-  "sn22.76:4.4": "und das Netz der Täuschung ist zerschlagen. "
+  "sn22.76:4.4": "und das Netz der Täuschung ist zerschlagen. ",
+  "sn22.76:5.1": "Sie haben den unerschütterlichen Zustand erreicht, "
 }
