Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn22.76:4.3": "Die Einbildung ‚ich bin‘ ist abgeschnitten, ",
   "sn22.76:4.4": "und das Netz der Täuschung ist zerschlagen. ",
   "sn22.76:5.1": "Sie haben den unerschütterlichen Zustand erreicht, ",
-  "sn22.76:5.2": "ihr Geist ist ungetrübt, "
+  "sn22.76:5.2": "ihr Geist ist ungetrübt, ",
+  "sn22.76:5.3": "nichts in der Welt haftet an ihnen, "
 }
