--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn22.76:5.2": "ihr Geist ist ungetrübt, ",
   "sn22.76:5.3": "nichts in der Welt haftet an ihnen, ",
   "sn22.76:5.4": "sie sind heilig geworden, ungefleckt. ",
-  "sn22.76:6.1": "Da sie die fünf Aggregate vollständig verstehen, "
+  "sn22.76:6.1": "Da sie die fünf Aggregate vollständig verstehen, ",
+  "sn22.76:6.2": "sind die sieben guten Eigenschaften ihr Revier. "
 }
