--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn22.76:6.2": "sind die sieben guten Eigenschaften ihr Revier. ",
   "sn22.76:6.3": "Diese guten Menschen verdienen Lob, ",
   "sn22.76:6.4": "sie sind rechtmäßige Kinder des Buddha. ",
-  "sn22.76:7.1": "Im Besitz der sieben Juwelen "
+  "sn22.76:7.1": "Im Besitz der sieben Juwelen ",
+  "sn22.76:7.2": "und in den drei Schulungen geschult, "
 }
