--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "sn22.76:6.3": "Diese guten Menschen verdienen Lob, ",
   "sn22.76:6.4": "sie sind rechtmäßige Kinder des Buddha. ",
   "sn22.76:7.1": "Im Besitz der sieben Juwelen ",
-  "sn22.76:7.2": "und in den drei Schulungen geschult, "
+  "sn22.76:7.2": "und in den drei Schulungen geschult, ",
+  "sn22.76:7.3": "leben die großen Helden weiter, "
 }
