--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "sn22.76:7.2": "und in den drei Schulungen geschult, ",
   "sn22.76:7.3": "leben die großen Helden weiter; ",
   "sn22.76:7.4": "Angst und Schrecken haben sie aufgegeben. ",
-  "sn22.76:8.1": "Im Besitz von zehn Faktoren "
+  "sn22.76:8.1": "Im Besitz von zehn Faktoren ",
+  "sn22.76:8.2": "besitzen diese Riesen Versenkung. "
 }
