Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn22.76:7.4": "Angst und Schrecken haben sie aufgegeben. ",
   "sn22.76:8.1": "Im Besitz von zehn Faktoren ",
   "sn22.76:8.2": "besitzen diese Riesen Versenkung. ",
-  "sn22.76:8.3": "Sie sind die Besten in der Welt, "
+  "sn22.76:8.3": "Sie sind die Besten in der Welt, ",
+  "sn22.76:8.4": "Verlangen findet man in ihnen nicht. "
 }
