Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "sn22.76:8.2": "besitzen diese Riesen Versenkung. ",
   "sn22.76:8.3": "Sie sind die Besten in der Welt, ",
   "sn22.76:8.4": "Verlangen findet man in ihnen nicht. ",
-  "sn22.76:9.1": "Das Wissen des Meisters ist erschienen: "
+  "sn22.76:9.1": "Das Wissen des Meisters ist erschienen: ",
+  "sn22.76:9.2": "‚Dieser Knochensack ist mein letzter.‘ "
 }
