Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn22.76:8.4": "Verlangen findet man in ihnen nicht. ",
   "sn22.76:9.1": "Das Wissen des Meisters ist erschienen: ",
   "sn22.76:9.2": "‚Dieser Knochensack ist mein letzter.‘ ",
-  "sn22.76:9.3": "Im Kern der spirituellen Reise "
+  "sn22.76:9.3": "Im Kern der spirituellen Reise ",
+  "sn22.76:9.4": "sind sie von andern unabhängig. "
 }
