--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -43,5 +43,6 @@
   "sn22.76:9.1": "Das Wissen des Meisters ist erschienen: ",
   "sn22.76:9.2": "‚Dieser Knochensack ist mein letzter.‘ ",
   "sn22.76:9.3": "Im Kern der spirituellen Reise ",
-  "sn22.76:9.4": "sind sie von andern unabhängig. "
+  "sn22.76:9.4": "sind sie von andern unabhängig. ",
+  "sn22.76:10.1": "Unerschütterlich angesichts von Unterscheidungen "
 }
