--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn22.76:9.2": "‚Dieser Knochensack ist mein letzter.‘ ",
   "sn22.76:9.3": "Im Kern der spirituellen Reise ",
   "sn22.76:9.4": "sind sie von andern unabhängig. ",
-  "sn22.76:10.1": "Unerschütterlich angesichts von Unterscheidungen "
+  "sn22.76:10.1": "Unerschütterlich angesichts von Unterscheidungen ",
+  "sn22.76:10.2": "sind sie von künftigen Leben befreit. "
 }
