--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -45,5 +45,6 @@
   "sn22.76:9.3": "Im Kern der spirituellen Reise ",
   "sn22.76:9.4": "sind sie von andern unabhängig. ",
   "sn22.76:10.1": "Unerschütterlich angesichts von Unterscheidungen ",
-  "sn22.76:10.2": "sind sie von künftigen Leben befreit. "
+  "sn22.76:10.2": "sind sie von künftigen Leben befreit. ",
+  "sn22.76:10.3": "Sie haben die Stufe der Gezähmten erreicht, "
 }
