--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.76:10.1": "Unerschütterlich angesichts von Unterscheidungen ",
   "sn22.76:10.2": "sind sie von künftigen Leben befreit. ",
   "sn22.76:10.3": "Sie haben die Stufe der Gezähmten erreicht, ",
-  "sn22.76:10.4": "in der Welt sind sie die Sieger. "
+  "sn22.76:10.4": "in der Welt sind sie die Sieger. ",
+  "sn22.76:11.1": "Nach oben, nach unten und ringsumher "
 }
