--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.76_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "sn22.76:10.4": "in der Welt sind sie die Sieger. ",
   "sn22.76:11.1": "Nach oben, nach unten und ringsumher ",
   "sn22.76:11.2": "ist kein Entzücken in ihnen zu finden. ",
-  "sn22.76:11.3": "Sie brüllen ihr Löwengebrüll: "
+  "sn22.76:11.3": "Sie brüllen ihr Löwengebrüll: ",
+  "sn22.76:11.4": "‚Die Erwachten sind die Unübertrefflichen in der Welt!‘“ "
 }
