--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -100,5 +100,6 @@
   "mn3:7.14": "નવા ભિક્ષુ ત્રણ કારણોના આધારે વખાણ કરવા લાયક છે.",
   "mn3:7.15": "‘એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે’—",
   "mn3:7.16": "આ પહેલી રીતે નવા ભિક્ષુ વખાણ કરવા લાયક છે.",
-  "mn3:7.17": "‘જે વસ્તુઓનો ગુરૂએ ત્ચાગ કરવાનો કહ્યો હોય એનો ત્યાગ કરે છે’—"
+  "mn3:7.17": "‘જે વસ્તુઓનો ગુરૂએ ત્ચાગ કરવાનો કહ્યો હોય એનો ત્યાગ કરે છે’—",
+  "mn3:7.18": "આ બીજી રીતે નવા ભિક્ષુ વખાણ કરવા લાયક છે."
 }
