--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -102,5 +102,6 @@
   "mn3:7.16": "આ પહેલી રીતે નવા ભિક્ષુ વખાણ કરવા લાયક છે.",
   "mn3:7.17": "‘જે વસ્તુઓનો ગુરૂએ ત્ચાગ કરવાનો કહ્યો હોય એનો ત્યાગ કરે છે’—",
   "mn3:7.18": "આ બીજી રીતે નવા ભિક્ષુ વખાણ કરવા લાયક છે.",
-  "mn3:7.19": "તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા નથી’—"
+  "mn3:7.19": "તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા નથી’—",
+  "mn3:7.20": "આ ત્રીજી રીતે નવા ભિક્ષુ વખાણ કરવા લાયક છે."
 }
