Translations by sujato to translation/en/sujato/sutta/mn/mn46_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn46_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn46_translation-en-sujato.json
@@ -163,7 +163,7 @@
   "mn46:20.7": "The color, aroma, and flavor would be unappetizing, but after drinking it he would be happy. ",
   "mn46:20.8": "This is comparable to the way of taking up practices that is painful now and results in future pleasure, I say. ",
   "mn46:21.1": "Suppose there was some curds, honey, ghee, and molasses all mixed together. ",
-  "mn46:21.2": "Then a man with dysentery would come along. ",
+  "mn46:21.2": "Then a man with bloody dysentery would come along. ",
   "mn46:21.3": "They’d say to him: ",
   "mn46:21.4": "‘Here, mister, this is curds, honey, ghee, and molasses all mixed together. Drink it if you like. ",
   "mn46:21.5": "If you drink it, the color, aroma, and flavor will be appetizing, and after drinking it you will be happy.’ ",
