Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1293,7 +1293,7 @@
   "pli-tv-kd8:32.1.60": "Tilting, and vessel, ",
   "pli-tv-kd8:32.1.61": "And in a basin, and on the ground; ",
   "pli-tv-kd8:32.1.62": "Termites, in the middle, they became worn, ",
-  "pli-tv-kd8:32.1.63": "From one side, and with starch. ",
+  "pli-tv-kd8:32.1.63": "From one edge, and with starch. ",
   "pli-tv-kd8:32.1.64": "Stiff, uncut, rectangles, ",
   "pli-tv-kd8:32.1.65": "He saw them loaded up; ",
   "pli-tv-kd8:32.1.66": "Having tested, the Sakyan Sage, ",
