Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1312,7 +1312,7 @@
   "pli-tv-kd8:32.1.79": "Deformed corner, frayed. ",
   "pli-tv-kd8:32.1.80": "They broke up, not enough, ",
   "pli-tv-kd8:32.1.81": "And a further supply, and much; ",
-  "pli-tv-kd8:32.1.82": "Blind Men’s Grove, absentminded, ",
+  "pli-tv-kd8:32.1.82": "In the Blind Men’s Grove, through absentmindedness, ",
   "pli-tv-kd8:32.1.83": "The rains by himself, and outside the rainy season. ",
   "pli-tv-kd8:32.1.84": "Two brothers, in Rājagaha,",
   "pli-tv-kd8:32.1.85": "Upananda, again in two; ",
