Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1317,7 +1317,7 @@
   "pli-tv-kd8:32.1.84": "Two brothers, in Rājagaha,",
   "pli-tv-kd8:32.1.85": "Upananda, again in two; ",
   "pli-tv-kd8:32.1.86": "Dysentery, illness, ",
-  "pli-tv-kd8:32.1.87": "And just both, the sick. ",
+  "pli-tv-kd8:32.1.87": "And just both, belonging to the sick. ",
   "pli-tv-kd8:32.1.88": "Naked, grass, bark, ",
   "pli-tv-kd8:32.1.89": "Bits of wood, human hair; ",
   "pli-tv-kd8:32.1.90": "Horse-hair, and owl’s wings, ",
