--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1328,7 +1328,7 @@
   "pli-tv-kd8:32.1.95": "So uncut borders. ",
   "pli-tv-kd8:32.1.96": "Long, floral, snake’s hood borders, ",
   "pli-tv-kd8:32.1.97": "Jacket, Lodh tree, turban; ",
-  "pli-tv-kd8:32.1.98": "Not yet offered, he leaves, ",
+  "pli-tv-kd8:32.1.98": "Not yet offered, he left, ",
   "pli-tv-kd8:32.1.99": "The Sangha is divided just then. ",
   "pli-tv-kd8:32.1.100": "They give to a faction, to the Sangha, ",
   "pli-tv-kd8:32.1.101": "Venerable Revata sent; ",
