Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1582,7 +1582,7 @@
   "pli-tv-kd9:7.20.140": "Apart from two procedures, ",
   "pli-tv-kd9:7.20.141": "Ordination in the Middle Country; ",
   "pli-tv-kd9:7.20.142": "Rehabilitation, a group of five, ",
-  "pli-tv-kd9:7.20.143": "Doers of all procedures. ",
+  "pli-tv-kd9:7.20.143": "Does of all procedures. ",
   "pli-tv-kd9:7.20.144": "Apart from rehabilitation, ",
   "pli-tv-kd9:7.20.145": "Is a group of ten monks; ",
   "pli-tv-kd9:7.20.146": "A sangha that does all procedures, ",
