Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1649,11 +1649,11 @@
   "pli-tv-kd9:7.20.207": "Thirty-two exactly. ",
   "pli-tv-kd9:7.20.208": "For them there is admittance, ",
   "pli-tv-kd9:7.20.209": "Explained the Fully Awakened one; ",
-  "pli-tv-kd9:7.20.210": "It is to be seen, to be remedied, ",
+  "pli-tv-kd9:7.20.210": "They are to be seen, to be remedied, ",
   "pli-tv-kd9:7.20.211": "There is no sending away. ",
   "pli-tv-kd9:7.20.212": "A procedure of ejection against one, ",
   "pli-tv-kd9:7.20.213": "Seven are illegitimate; ",
-  "pli-tv-kd9:7.20.214": "If committed in conformity, ",
+  "pli-tv-kd9:7.20.214": "If committed but acting properly, ",
   "pli-tv-kd9:7.20.215": "Those seven too are illegitimate. ",
   "pli-tv-kd9:7.20.216": "If not committed in conformity, ",
   "pli-tv-kd9:7.20.217": "Seven procedures are legitimate; ",
