Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1655,7 +1655,7 @@
   "pli-tv-kd9:7.20.213": "Seven are illegitimate; ",
   "pli-tv-kd9:7.20.214": "If committed but acting properly, ",
   "pli-tv-kd9:7.20.215": "Those seven too are illegitimate. ",
-  "pli-tv-kd9:7.20.216": "If not committed in conformity, ",
+  "pli-tv-kd9:7.20.216": "If committed and not acting properly, ",
   "pli-tv-kd9:7.20.217": "Seven procedures are legitimate; ",
   "pli-tv-kd9:7.20.218": "Face-to-face, and questioning, ",
   "pli-tv-kd9:7.20.219": "And done with admission. ",
