Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1669,7 +1669,7 @@
   "pli-tv-kd9:7.20.227": "These sixteen are illegitimate. ",
   "pli-tv-kd9:7.20.228": "If it does the right one, ",
   "pli-tv-kd9:7.20.229": "These sixteen are legitimate; ",
-  "pli-tv-kd9:7.20.230": "It counter-accused reciprocally, ",
+  "pli-tv-kd9:7.20.230": "It would counter-accuse reciprocally, ",
   "pli-tv-kd9:7.20.231": "These sixteen are illegitimate. ",
   "pli-tv-kd9:7.20.232": "Two and two having that basis, ",
   "pli-tv-kd9:7.20.233": "Also these sixteen are legitimate; ",
