Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1690,7 +1690,7 @@
   "pli-tv-kd9:7.20.248": "And incomplete assembly with legitimate-like, ",
   "pli-tv-kd9:7.20.249": "And unanimous assembly, in these cases; ",
   "pli-tv-kd9:7.20.250": "Having done the basis one by one, ",
-  "pli-tv-kd9:7.20.251": "The Discerning One linked the permutation. ",
+  "pli-tv-kd9:7.20.251": "A discerning one would link the permutation series. ",
   "pli-tv-kd9:7.20.252": "Demotion for the incompetent fool, ",
   "pli-tv-kd9:7.20.253": "The corrupter of families should be banished; ",
   "pli-tv-kd9:7.20.254": "And a procedure of reconciliation, ",
