Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1695,7 +1695,7 @@
   "pli-tv-kd9:7.20.253": "The corrupter of families should be banished; ",
   "pli-tv-kd9:7.20.254": "And a procedure of reconciliation, ",
   "pli-tv-kd9:7.20.255": "Should be done to the abuser. ",
-  "pli-tv-kd9:7.20.256": "Not recognizing, not making amends, ",
+  "pli-tv-kd9:7.20.256": "In not recognizing, in not making amends, ",
   "pli-tv-kd9:7.20.257": "And one who does not give up a view; ",
   "pli-tv-kd9:7.20.258": "For them is a procedure of ejection, ",
   "pli-tv-kd9:7.20.259": "Was said by the Caravan Leader. ",
