Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1696,11 +1696,11 @@
   "pli-tv-kd9:7.20.254": "And a procedure of reconciliation, ",
   "pli-tv-kd9:7.20.255": "Should be done to the abuser. ",
   "pli-tv-kd9:7.20.256": "In not recognizing, in not making amends, ",
-  "pli-tv-kd9:7.20.257": "And one who does not give up a view; ",
-  "pli-tv-kd9:7.20.258": "For them is a procedure of ejection, ",
-  "pli-tv-kd9:7.20.259": "Was said by the Caravan Leader. ",
-  "pli-tv-kd9:7.20.260": "Further for the method-procedures, ",
-  "pli-tv-kd9:7.20.261": "The Wise One determines condemnation; ",
+  "pli-tv-kd9:7.20.257": "And one who would not give up a view; ",
+  "pli-tv-kd9:7.20.258": "For them there is the procedure of ejection, ",
+  "pli-tv-kd9:7.20.259": "Said the Caravan Leader. ",
+  "pli-tv-kd9:7.20.260": "With regard to the procedures that have a method, ",
+  "pli-tv-kd9:7.20.261": "A wise one should determine condemnation; ",
   "pli-tv-kd9:7.20.262": "For those just in forward order, ",
   "pli-tv-kd9:7.20.263": "He conducts himself properly, he should ask. ",
   "pli-tv-kd9:7.20.264": "Lifting of those procedures, ",
