Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1701,7 +1701,7 @@
   "pli-tv-kd9:7.20.259": "Said the Caravan Leader. ",
   "pli-tv-kd9:7.20.260": "With regard to the procedures that have a method, ",
   "pli-tv-kd9:7.20.261": "A wise one should determine condemnation; ",
-  "pli-tv-kd9:7.20.262": "For those just in forward order, ",
+  "pli-tv-kd9:7.20.262": "For those who act suitably, ",
   "pli-tv-kd9:7.20.263": "He conducts himself properly, he should ask. ",
   "pli-tv-kd9:7.20.264": "Lifting of those procedures, ",
   "pli-tv-kd9:7.20.265": "And below with the method for procedures; ",
