Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -70,7 +70,7 @@
   "pli-tv-kd11:1.4.42": "These monks Paṇḍuka and Lohitaka are quarrelsome, argumentative, ",
   "pli-tv-kd11:1.4.43": "and creators of legal issues in the Sangha. ",
   "pli-tv-kd11:1.4.44": "They go to other monks who are also quarrelsome, argumentative, and creators of legal issues in the Sangha, and they say to them, ",
-  "pli-tv-kd11:1.4.45": "Don’t let him beat you. ",
+  "pli-tv-kd11:1.4.45": "“Don’t let him beat you. ",
   "pli-tv-kd11:1.4.46": "Argue back forcefully. ",
   "pli-tv-kd11:1.4.47": "You’re wiser, more competent, more learned, and more capable than he. ",
   "pli-tv-kd11:1.4.48": "Don’t be afraid of him. ",
